# ai-serverless-samples

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
notebooks/: modal_call_sample.ipynb
src/: 01_modal_simple.py  02_modal_sdxl.py  03_modal_sdxl_memory_snapshot.py
