[project]
name = "ai-serverless-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.30.3",
    "modal>=0.64.126",
    "torch>=2.4.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.5",
]
